--- a/gh-pages.deploy.yml
+++ b/gh-pages.deploy.yml
@@ -10,7 +10,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-
+    env:
+      NEXT_PUBLIC_BASE_PATH: /onlinespotifyclient
+      
     strategy:
       matrix:
         node-version: [17.x]
